# cba-midi

./: .envrc  .gitignore  Cargo.toml  flake.nix  meson.build  meson_options.txt
.github/workflows/: build.yml
build-aux/: PKGBUILD  cargo-build.py  dist-vendor.py  dist-vendor.sh  eu.muehml.cba-midi.json  launcher.rs  msys2-deploy.sh
data/: cba-midi.gresource.xml  eu.muehml.cba-midi.desktop  eu.muehml.cba-midi.desktop.in  map.txt  meson.build
data/ui/: meson.build  window.blp
nix/: package.nix
share/cba-midi/: map.txt
src/: cba-midi.gresource.xml  config.rs  config.rs.in  main.rs  map.txt  meson.build
src/ui/: window.blp
